update tex - finish cv

--- a/tex/References.bib
+++ b/tex/References.bib
@@ -233,3 +233,215 @@
   year={1988},
   publisher={Oxford University Press}
 }
+
+% A guide to modern econometrics
+@book{verbeek2008guide,
+  title={A guide to modern econometrics},
+  author={Verbeek, Marno},
+  year={2008},
+  publisher={John Wiley \& Sons}
+}
+
+% Macroeconomics and reality
+@article{sims1980macroeconomics,
+  title={Macroeconomics and reality},
+  author={Sims, Christopher A},
+  journal={Econometrica: journal of the Econometric Society},
+  pages={1--48},
+  year={1980},
+  publisher={JSTOR}
+}
+
+% Applied econometric time series
+@book{enders2008applied,
+  title={Applied econometric time series},
+  author={Enders, Walter},
+  year={2008},
+  publisher={John Wiley \& Sons}
+}
+
+% Regression shrinkage and selection via the lasso
+@article{tibshirani1996regression,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={58},
+  number={1},
+  pages={267--288},
+  year={1996},
+  publisher={Wiley Online Library}
+}
+
+% The elements of statistical learning: data mining, inference, and prediction
+@book{hastie2009elements,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+  volume={2},
+  year={2009},
+  publisher={Springer}
+}
+
+% Hoornweg, Victor (2018). "Chapter 9". Science: Under Submission. Hoornweg Press
+
+@book{hoornweg2018science,
+    title={Science: Under Submission},
+    author={Hoornweg, Victor},
+    year={2018},
+    publisher={Hoornweg Press}
+}
+
+% Zou, H. (2006). The Adaptive Lasso and its Oracle Properties
+@article{zou2006adaptive,
+  title={The adaptive lasso and its oracle properties},
+  author={Zou, Hui},
+  journal={Journal of the American statistical association},
+  volume={101},
+  number={476},
+  pages={1418--1429},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+
+% Random lasso
+@article{wang2011random,
+  title={Random lasso},
+  author={Wang, Sijian and Nan, Bin and Rosset, Saharon and Zhu, Ji},
+  journal={The annals of applied statistics},
+  volume={5},
+  number={1},
+  pages={468},
+  year={2011},
+  publisher={NIH Public Access}
+}
+
+% Model selection and estimation in regression with grouped variables
+@article{yuan2006model,
+  title={Model selection and estimation in regression with grouped variables},
+  author={Yuan, Ming and Lin, Yi},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={68},
+  number={1},
+  pages={49--67},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+% A robust hybrid of lasso and ridge regression
+@article{owen2007robust,
+  title={A robust hybrid of lasso and ridge regression},
+  author={Owen, Art B},
+  journal={Contemporary Mathematics},
+  volume={443},
+  number={7},
+  pages={59--72},
+  year={2007},
+  publisher={Providence, RI: American Mathematical Society}
+}
+
+% A new look at the statistical model identification
+@article{akaike1974new,
+  title={A new look at the statistical model identification},
+  author={Akaike, Hirotugu},
+  journal={IEEE transactions on automatic control},
+  volume={19},
+  number={6},
+  pages={716--723},
+  year={1974},
+  publisher={Ieee}
+}
+
+% Estimating the dimension of a model
+@article{schwarz1978estimating,
+  title={Estimating the dimension of a model},
+  author={Schwarz, Gideon},
+  journal={The annals of statistics},
+  pages={461--464},
+  year={1978},
+  publisher={JSTOR}
+}
+
+% Cross-validatory choice and assessment of statistical predictions
+@article{stone1974cross,
+  title={Cross-validatory choice and assessment of statistical predictions},
+  author={Stone, Mervyn},
+  journal={Journal of the royal statistical society: Series B (Methodological)},
+  volume={36},
+  number={2},
+  pages={111--133},
+  year={1974},
+  publisher={Wiley Online Library}
+}
+
+% Submodel selection and evaluation in regression. The X-random case
+@article{breiman1992submodel,
+  title={Submodel selection and evaluation in regression. The X-random case},
+  author={Breiman, Leo and Spector, Philip},
+  journal={International statistical review/revue internationale de Statistique},
+  pages={291--319},
+  year={1992},
+  publisher={JSTOR}
+}
+
+% Matrix: Sparse and Dense Matrix Classes and Methods
+@Manual{matrix2020cran,
+    title = {Matrix: Sparse and Dense Matrix Classes and Methods},
+    author = {Douglas Bates and Martin Maechler and Mikael Jagan},
+    year = {2022},
+    note = {R package version 1.4-1},
+    url = {https://CRAN.R-project.org/package=Matrix},
+  }
+  
+% R2
+@article{heinisch1962steel,
+  title={Steel, RGD, and JH Torrie: Principles and Procedures of Statistics.(With special Reference to the Biological Sciences.) McGraw-Hill Book Company, New York, Toronto, London 1960, 481 S., 15 Abb.; 81 s 6 d},
+  author={Heinisch, O},
+  journal={Biometrische Zeitschrift},
+  volume={4},
+  number={3},
+  pages={207--208},
+  year={1962},
+  publisher={WILEY-VCH Verlag}
+}
+
+% Advantages of the mean absolute error (MAE) over the root mean square error (RMSE) in assessing average model performance
+@article{willmott2005advantages,
+  title={Advantages of the mean absolute error (MAE) over the root mean square error (RMSE) in assessing average model performance},
+  author={Willmott, Cort J and Matsuura, Kenji},
+  journal={Climate research},
+  volume={30},
+  number={1},
+  pages={79--82},
+  year={2005}
+}
+
+% Mathematical statistics: basic ideas and selected topics, volumes I-II package
+@book{bickel2015mathematical,
+  title={Mathematical statistics: basic ideas and selected topics, volumes I-II package},
+  author={Bickel, Peter J and Doksum, Kjell A},
+  year={2015},
+  publisher={Chapman and Hall/CRC}
+}
+
+% Another look at measures of forecast accuracy
+@article{hyndman2006another,
+  title={Another look at measures of forecast accuracy},
+  author={Hyndman, Rob J and Koehler, Anne B},
+  journal={International journal of forecasting},
+  volume={22},
+  number={4},
+  pages={679--688},
+  year={2006},
+  publisher={Elsevier}
+}
+
+% The determination of the order of an autoregression
+@article{hannan1979determination,
+  title={The determination of the order of an autoregression},
+  author={Hannan, Edward J and Quinn, Barry G},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={41},
+  number={2},
+  pages={190--195},
+  year={1979},
+  publisher={Wiley Online Library}
+}
