--- a/tex/References.bib
+++ b/tex/References.bib
@@ -445,3 +445,16 @@
   year={1979},
   publisher={Wiley Online Library}
 }
+
+% Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent
+@Article{glmnet2011noah,
+    title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
+    author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {39},
+    number = {5},
+    pages = {1--13},
+    url = {https://www.jstatsoft.org/v39/i05/},
+    doi = {10.18637/jss.v039.i05},
+  }
